src/blokus/static/css/layout.css
@font-face {
  font-family: 'Droid Serif'; font-style: normal; font-weight: normal;
  src: local('Droid Serif'), local('DroidSerif'), url('DroidSerif.ttf') format('truetype');
}
@font-face {
  font-family: 'Droid Sans'; font-style: normal; font-weight: normal;
  src: local('Droid Sans'), local('DroidSans'), url('DroidSans.ttf') format('truetype');
}
.clearfix:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}
.clearfix { display: inline-block; }
html[xmlns] .clearfix { display: block; }
* html .clearfix { height: 1%; }
html {
	background: url("../img/feltbg.jpg") center top;
	font-family: 'Droid Sans', sans-serif;
	height: 100%;
	font-size: 12px;
}
h1, h2, h3, h4, h5, .serif, .title { font-family: 'Droid Serif', sans-serif; }
.sans, .sans-serif, .button { font-family: 'Droid Sans', sans-serif; }
.vignette {
	background:transparent -webkit-radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
	width:100%;
	height:100%;
	position:absolute;
	top:0;
}
.button {
	border: 1px solid #7386C0;
	background: #CCCCCC;
	color: black;
	font-size: 12px;
	font-weight: bold;
	box-shadow: 0px 0px 6px rgba(0,0,0,0.8);
	text-shadow: 0px 0 5px white, 0px 0 5px white, 0px 0 10px white, 0px 0 10px white, 0px 0 12px white, 0px 0 15px white; /* Glow */
	padding:3px 20px;
	text-decoration:none;
}
.button:hover { background: white; }
b{ font-weight: bold;}
#errorstackcontainer {
	position: fixed;
	top: 10px; left: 0; right: 0;
}
#errorstack {
	margin: 0 auto;
	width: 500px;
}
.error {
	background: #ffffaa; border: 1px dashed red; outline: 1px solid #ffffaa;
	padding: 5px; margin: 10px;
	font-weight: bold; text-align: center; color: red;
}
#msgcontainer {
	position: fixed;
	top: 200px; left: 0; right: 0;
	z-index: 1000;
}
#msg {
	margin: 0 auto; padding: 40px 10px;
	width: 300px; height: 80px;
	background: rgba(0, 0, 0, 0.85);
	border-radius: 5px;
	font-weight: bold; text-align: center; color: white;
}
	#msg .buttons {
		margin: 30px 0;
		text-align: center;
	}
.error {
	padding: 5px; margin: 10px;
	background: #ffffaa; border: 1px dashed red; outline: 1px solid #ffffaa;
	font-weight: bold; text-align: center; color: red;
}
#logo {
	margin:0 auto;
	display:block;
}
#container {
	margin: 0px auto;
	width: 800px;
	position: relative;
}
#container > div {
	position: absolute;
	left: 0; right: 0;
	min-height: 400px;
}
/* Form field labels */
label {
  margin: 5px 0;
  background: white;
  display: inline-block;
}
label span {
  position: absolute;
  padding: 5px;
  margin-left: 3px;
  color: #999;
}
label input {
	display: inline-block;
}
label input, label textarea, label select {
  position: relative;
  margin: 0; padding: 6px;
  border-width: 1px;
  background: transparent;
  font: inherit;
}
@media screen and (-webkit-min-device-pixel-ratio:0) {
    label input, label textarea, label select { padding: 4px; }
}
/* Register Form */
.errorlist {
	display: inline-block;
	color: red;
	font-weight: bold;
	margin-left: 10px;
}
.form {
	margin:80px 0 0 200px; padding:10px;
	width:400px;
}
.form p { margin-top:10px; }
.form a {
	float:left;
	margin-right:5px;
}
/* Lobby Layout */
.box {
	background: rgba(0, 0, 0, 0.53);
	color:white;
}
#profileBox {
	width:700px; height:64px;
	display:block;
	margin:20px 0px 20px 50px;
	position: relative;
}
	#profileBox img {
		position: absolute;
		top: 12px; left: 12px;
		width:40px; height:40px;
	}
	#profileBox #profileInfo {
		position: absolute;
		top: 12px; left: 64px;
	}
		#profileBox #profileInfo .welcome { font-size: 20px; }
		#profileBox #profileInfo .stats { margin: 5px 2px; }
	#profileBox #signedOut {
		position: absolute;
		top: 8px; right: 12px;
	}
	#profileBox #signedOut .links { text-align: right; }
	#profileBox #signedOut .links a {
		margin: 3px 6px;
		color: white;
	}
	#profileBox #profileMenu {
		float:right;
		margin-right:10px; margin-top:25px;
	}
h1 { font-weight:bold; font-size:24pt; }
.modelist {
	font-weight:bold; text-align:center;
	margin-left:30px;
}
.modelist li {
	margin-left:20px; padding-bottom:20px;
	width:160px;
	float:left;
	cursor: pointer;
}
.modelist li:hover { background: rgba(0, 0, 0, 0.72); }
.modelist li div { height:100px; }
.modelist h1 { font-size:48pt; }
.modelist h2 {
	font-size:22pt;
	padding-top:15px;
}
.modelist h3 { font-size:18pt; }
.modelist p {
	height: 50px;
	padding: 10px;
	line-height: 1.5; font-weight:normal;
}
#privatelobby, #waiting {
	width:700px;
	margin:0px 0px 0px 50px;
}
	#waiting { text-align: center; }
	#privatelobby > div, #waiting > div {
		position: relative;
		padding: 16px;
	}
	#privatelobby .title, #waiting .title { font-size: 22px; font-weight: bold; }
	#privatelobby > div > p { margin: 30px 0 10px 0; }
	#waiting > div > p { margin: 20px 0 5px 0; }
	#waiting > div > .loading {
		position: relative;
		width: 100%; height: 30px;
		margin-bottom: 10px;
	}
	#privatelobby .playerchoices {
		position: relative;
		height: 46px;
	}
	#privatelobby .playerchoices > div {
		position: absolute;
		top: 0; bottom: 0;
		width: 325px;
		background: rgba(0, 0, 0, 0.42);
		cursor: pointer;
	}
		#privatelobby .playerchoices > div:hover { background: rgba(0, 0, 0, 0.62); }
		#privatelobby .playerchoices > div.sel {
			outline: 3px solid #CCA;
			background: rgba(0, 0, 0, 0.79);
			box-shadow: 0px 0px 9px #FFE;
		}
	#privatelobby .playerchoices .p2 { left: 0; }
	#privatelobby .playerchoices .p4 { right: 0; }
		#privatelobby .playerchoices .big {
			position: absolute;
			top: 12px; left: 10px;
			font-size: 20px;
		}
		#privatelobby .playerchoices .players {
			position: absolute;
			left: 28px; top: 16px;
		}
		#privatelobby .playerchoices p {
			position: absolute;
			left: 90px; top: 16px; right: 8px;
		}
	#privatelobby input {
		width: 100%;
		border: 0;
		border-radius: 3px;
		font-size: 17px;
		padding: 4px 0;
		text-indent: 4px;
	}
	#privatelobby > div > .players { padding-top: 30px; }
		#privatelobby .players > div {
			position: relative;
			display: inline-block;
			border-left: 1px solid rgba(255, 255, 255, 0.08); border-right: 1px solid rgba(0, 0, 0, 0.28);
			padding: 0 4px;
			width: 23%;
			cursor: pointer;
		}
		#privatelobby div .players > div:first-child { border-left: 0; }
		#privatelobby div .players > div:last-child { border-right: 0; }
			#privatelobby .players > div > .name { font-size: 14px; }
			#privatelobby .players > div > .colour {
				position: absolute;
				top: 5px; right: 5px;
				width: 4px; height: 4px;
				border-radius: 2px;
				background-color: #ccc;
				font-size: 14px;
			}
			#privatelobby .players > div > .offline { font-size: 10px; color: #ccc; }
	#privatelobby .buttons {
		margin-top: 15px;
		height: 20px;
		position: relative;
	}
	#privatelobby .buttons .button {
		position: absolute;
		top: 0;
	}
	#privatelobby #start { right: 0; display: none; }
.loading {
	position: absolute;
	left: 0; top: 0; right: 0; bottom: 0;
	background: transparent url(../img/loading.gif) no-repeat center;
}
/* Game View */
.gameview { top:-40px; }
.gameview svg { z-index: 100; }
.toppanel {
	position: absolute;
	top: 0;
	width: 122px;
	background: rgba(0, 0, 0, 0.5);
	color:white;
	text-align:centre;
	padding:5px;
}
.left { left: 0;  }
.right { right:0; }
.toppanel h1 {
	font-size: 12pt;
	padding: 17px 0px 0px 0px;
}
.playerpanelcontainer.left {
	position: absolute;
	top: 60px; left: 0;
	width: 132px;
}
.playerpanelcontainer.left .playerpanel { height: 600px; }
.playerpanelcontainer.right {
	position: absolute;
	top: 60px; right: 0;
	width: 132px;
}
.playerpanelcontainer.right .playerpanel { height: 200px; }
.playerpanelcontainer { background: rgba(1, 1, 1, 0.5); }
#turntext {
	position:absolute;
	top: 36px;
	left: 0px;
	width: 126px;
	height: 560px;
	background: rgba(0,0,0,0.6);
	font-weight:bold;
	z-index:110;
}
	#turntext div {
		margin-top:250px;
		width:123px;
		background:0;
		text-align:center;
	}
.playerpanel div {
	background: rgba(0, 0, 0, 0.5);
	color:white;
	padding:3px;
	height:30px;
}
	.playerpanel div img {
		width: 30px; height: 30px;
		float:left;
	}
	.playerpanel div h1 {
		font-size:12pt;
		float:right;
	}
	.playerpanel div p { float:right; }
.game-help {
	position:absolute;
	top: 6px; left: 160px;
	z-index:101;
}
.game-exit {
	position:absolute;
	top: 6px; right: 160px;
	z-index:101;
}
.panel {
	position:absolute;
	top:0;
	background: rgba(0, 0, 0, 0.5);
}
#helpscreen {
	position: absolute;
	top: 125px; left: 175px; right: 185px;
	background: url("../img/wood.jpg") center top;
	border-radius: 5px;
	z-index: 400;
	padding: 10px;
	height: 420px;
}
	#helpscreen h1 {
		text-align: center;
		text-shadow: 0px 1px 1px #630;
		font-weight: bold;
		opacity: .75;
		font-size: 250%;
		padding-bottom: 5px;
	}

	#helpscreen #slider {
		overflow: scroll;
		height: 330px;
		margin: 10px 0px;
		border: 5px inset rgba(66, 33, 0, .5);
	}

	#slider #inner {
		background: url("../img/wood_light.jpg") center top;
		background-attachment: scroll;
		padding: 0px 10px;
		border: 1px solid rgba(0, 0, 0, .5);
	}

	#helpscreen .buttons {
		margin: 10px 0;
		text-align: center;
	}

	#helpscreen .buttons a {
		background: rgba(0, 0, 0, 0.2);
		border: 3px outset rgba(66, 33, 0, .5);
		text-shadow: 0px 1px 1px #630;
		opacity: .8;
		box-shadow: 0px 0px 6px rgba(0,0,0,0.8);
	}

	#helpscreen .buttons a:hover {
		background: transparent;
		/*background: url("../img/wood.jpg") center top;*/
		background: ;
	}

	#inner h2 {
		text-align: center;
		text-shadow: 0px 1px 1px #630;
		font-weight: bold;
		opacity: .75;
		font-size: 150%;
		padding: 5px;
	}

	#helpscreen p {
		opacity: .8;
		padding-bottom: 5px;
	}

	#helpscreen li {
		list-style-type: disc;
		opacity: .8;
		padding-bottom: 5px;
		margin-left: 2em;
	}

